--- a/Mamas_2.0/nbproject/private/private.properties
+++ b/Mamas_2.0/nbproject/private/private.properties
@@ -3,7 +3,7 @@ auxiliary.org-netbeans-modules-php-editor.getter_2e_setter_2e_method_2e_name_2e_
 auxiliary.org-netbeans-modules-php-editor.public_2e_modifier_2e_project_2e_property=false
 copy.src.files=true
 copy.src.on.open=true
-copy.src.target=C:\\xampp\\htdocs\\Mamas_2.0
+copy.src.target=D:\\Xampp\\htdocs\\Desafios\\Mamas_2.0
 index.file=index.php
 run.as=LOCAL
-url=http://localhost:9090/Mamas_2.0
+url=http://localhost:9090/Desafios/Mamas_2.0
